# BXC_gb28181Client

./: .gitignore  CMakeLists.txt  README.md  SipClient.cpp  SipClient.h  SipServerConfig.h  main.cpp
Utils/: Log.h  Utils.h
deleted/: RtpSendPs.cpp  RtpSendPs.h
windows/: BXC_gb28181Client.sln  BXC_gb28181Client.vcxproj  BXC_gb28181Client.vcxproj.filters
